--- a/x360ce.App.Beta/Controls/ProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/ProgramListControl.xaml
@@ -18,54 +18,44 @@
 			<RowDefinition Height="*" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
+		<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
 				<Button
 					Name="ImportButton"
-					HorizontalAlignment="Right"
-					Click="ImportButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_import}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Import..." Style="{StaticResource ButtonLabel}" />
+					Click="ImportButton_Click">
+					<StackPanel>
+						<ContentControl Content="{StaticResource Icon_import}" />
+						<Label Content="Import..." />
 					</StackPanel>
 				</Button>
 				<Button
-					Name="ExportButton"
-					HorizontalAlignment="Right"
-					Click="ExportButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_export}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Export..." Style="{StaticResource ButtonLabel}" />
+					Margin="0,3,3,3"
+                    Name="ExportButton"
+					Click="ExportButton_Click">
+					<StackPanel>
+						<ContentControl Content="{StaticResource Icon_export}" />
+						<Label Content="Export..." />
 					</StackPanel>
 				</Button>
-			</ToolBar>
-		</ToolBarPanel>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
+		</StackPanel>
+		<StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
 				<Button
 					Name="DeleteButton"
-					HorizontalAlignment="Right"
-					Click="DeleteButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_Delete}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Delete" Style="{StaticResource ButtonLabel}" />
+					Click="DeleteButton_Click">
+					<StackPanel>
+						<ContentControl Content="{StaticResource Icon_Delete}" />
+						<Label Content="Delete" />
 					</StackPanel>
 				</Button>
 				<Button
-					Name="RefreshButton"
-					HorizontalAlignment="Right"
-					Click="RefreshButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_Refresh}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Refresh" Style="{StaticResource ButtonLabel}" />
+					Margin="0,3,3,3"
+                    Name="RefreshButton"
+					Click="RefreshButton_Click">
+					<StackPanel>
+						<ContentControl Content="{StaticResource Icon_Refresh}" />
+						<Label Content="Refresh" />
 					</StackPanel>
 				</Button>
-			</ToolBar>
-		</ToolBarPanel>
+		</StackPanel>
 		<Border
 			Grid.Row="1"
 			Height="1"
