--- a/x360ce.App.Beta/Controls/DebugControl.xaml
+++ b/x360ce.App.Beta/Controls/DebugControl.xaml
@@ -1,120 +1,113 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.DebugControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	MinWidth="420"
-	MinHeight="320"
-	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<GroupBox>
-		<GroupBox.Header>
-			<TextBlock Text="Performance Test" />
-		</GroupBox.Header>
-		<Grid>
-			<Grid.RowDefinitions>
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="auto" />
-				<RowDefinition Height="*" />
-				<RowDefinition Height="auto" />
-			</Grid.RowDefinitions>
-			<Grid.ColumnDefinitions>
-				<ColumnDefinition />
-				<ColumnDefinition />
-			</Grid.ColumnDefinitions>
-			<StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
-				<CheckBox Name="EnableCheckBox" VerticalAlignment="Center" Content="Enable" />
-				<Button
-					Name="TestButton"
-					HorizontalAlignment="Right"
-					Click="TestButton_Click"
-					Content="T" />
-			</StackPanel>
-			<StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
-				<Label Name="CpuLabel" VerticalAlignment="Center" Content="CPU:" />
-				<TextBox
-					Name="CpuTextBox"
-					MinWidth="75"
-					HorizontalAlignment="Right"
-					HorizontalContentAlignment="Right"
-					IsReadOnly="True"
-					TextWrapping="Wrap" />
-			</StackPanel>
-			<CheckBox
-				Name="GetDInputStatesCheckBox"
-				Grid.Row="1"
-				Grid.Column="0"
-				Content="Get DInput States" />
-			<CheckBox
-				Name="GetXInputStatesCheckBox"
-				Grid.Row="1"
-				Grid.Column="1"
-				Content="Get XInput States" />
-			<CheckBox
-				Name="SetXInputStatesCheckBox"
-				Grid.Row="2"
-				Grid.Column="1"
-				Content="Set XInput States" />
-			<CheckBox
-				Name="UpdateInterfaceCheckBox"
-				Grid.Row="2"
-				Grid.Column="0"
-				Content="Update Interface" />
-			<CheckBox
-				Name="TestCheckIssuesCheckBox"
-				Grid.Row="3"
-				Grid.Column="0"
-				Content="Check Issues" />
-			<Button
-				Name="ThrowExceptionButton"
-				Grid.Row="4"
-				Grid.Column="0"
-				MinWidth="75"
-				Margin="4,2,4,2"
-				Click="ThrowExceptionButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_Warning}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Throw Exception" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="CleanupDevicesButton"
-				Grid.Row="4"
-				Grid.Column="1"
-				MinWidth="75"
-				Margin="4,2,4,2"
-				Click="CleanupDevicesButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_broom}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Cleanup Devices" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<TextBox
-				Name="LogTextBox"
-				Grid.Row="6"
-				Grid.Column="0"
-				Grid.ColumnSpan="2"
-				MinHeight="48"
-				Margin="4"
-				Padding="0"
-				HorizontalAlignment="Stretch"
-				VerticalAlignment="Stretch"
-				IsReadOnly="True"
-				ScrollViewer.HorizontalScrollBarVisibility="Auto"
-				ScrollViewer.VerticalScrollBarVisibility="Auto"
-				TextWrapping="Wrap" />
-			<JcControls:ProgressBarControl Name="ProgressBarPanel" Grid.Row="7" Grid.ColumnSpan="2" />
-		</Grid>
-	</GroupBox>
+    x:Class="x360ce.App.Controls.DebugControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    MinWidth="420"
+    MinHeight="320"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <GroupBox>
+        <GroupBox.Header>
+            <TextBlock Text="Performance Test" />
+        </GroupBox.Header>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="auto" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal">
+                <CheckBox Name="EnableCheckBox" VerticalAlignment="Center" Content="Enable" />
+                <Button
+                    Name="TestButton"
+                    HorizontalAlignment="Right"
+                    Click="TestButton_Click"
+                    Content="T" />
+            </StackPanel>
+            <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
+                <Label Name="CpuLabel" VerticalAlignment="Center" Content="CPU:" />
+                <TextBox
+                    Name="CpuTextBox"
+                    MinWidth="75"
+                    HorizontalAlignment="Right"
+                    HorizontalContentAlignment="Right"
+                    IsReadOnly="True"
+                    TextWrapping="Wrap" />
+            </StackPanel>
+            <CheckBox
+                Name="GetDInputStatesCheckBox"
+                Grid.Row="1"
+                Grid.Column="0"
+                Content="Get DInput States" />
+            <CheckBox
+                Name="GetXInputStatesCheckBox"
+                Grid.Row="1"
+                Grid.Column="1"
+                Content="Get XInput States" />
+            <CheckBox
+                Name="SetXInputStatesCheckBox"
+                Grid.Row="2"
+                Grid.Column="1"
+                Content="Set XInput States" />
+            <CheckBox
+                Name="UpdateInterfaceCheckBox"
+                Grid.Row="2"
+                Grid.Column="0"
+                Content="Update Interface" />
+            <CheckBox
+                Name="TestCheckIssuesCheckBox"
+                Grid.Row="3"
+                Grid.Column="0"
+                Content="Check Issues" />
+            <Button
+                Name="ThrowExceptionButton"
+                Grid.Row="4"
+                Grid.Column="0"
+                Click="ThrowExceptionButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_Warning}" />
+                    <Label Content="Throw Exception" />
+                </StackPanel>
+            </Button>
+            <Button
+                Name="CleanupDevicesButton"
+                Grid.Row="4"
+                Grid.Column="1"
+                Click="CleanupDevicesButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_broom}" />
+                    <Label Content="Cleanup Devices" />
+                </StackPanel>
+            </Button>
+            <TextBox
+                Name="LogTextBox"
+                Grid.Row="6"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                MinHeight="48"
+                Margin="4"
+                Padding="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                IsReadOnly="True"
+                ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                ScrollViewer.VerticalScrollBarVisibility="Auto"
+                TextWrapping="Wrap" />
+            <JcControls:ProgressBarControl Name="ProgressBarPanel" Grid.Row="7" Grid.ColumnSpan="2" />
+        </Grid>
+    </GroupBox>
 </UserControl>
