--- a/x360ce.App.Beta/Controls/LogControl.xaml
+++ b/x360ce.App.Beta/Controls/LogControl.xaml
@@ -1,95 +1,85 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.LogControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:converters="clr-namespace:x360ce.App.Converters"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="120"
-	d:DesignWidth="480"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid VerticalAlignment="Stretch">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
-				<Label Name="LogSizeLabel" Content="Log Size:" />
-				<ComboBox Name="LogSizeComboBox" SelectionChanged="LogSizeComboBox_SelectionChanged">
-					<ComboBoxItem Content="200" Selector.IsSelected="True" />
-					<ComboBoxItem Content="500" />
-					<ComboBoxItem Content="1000" />
-					<ComboBoxItem Content="5000" />
-				</ComboBox>
-			</ToolBar>
-		</ToolBarPanel>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
-				<Button
-					Name="ClearButton"
-					HorizontalAlignment="Right"
-					Click="ClearButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_broom}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Clear" Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-			</ToolBar>
-		</ToolBarPanel>
-		<Border
-			Grid.Row="1"
-			Height="1"
-			BorderBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-			BorderThickness="1"
-			SnapsToDevicePixels="True" />
-		<DataGrid
-			xmlns:local="clr-namespace:x360ce.App.Converters"
-			x:Name="MainDataGrid"
-			Grid.Row="1"
-			Height="Auto"
-			HorizontalAlignment="Stretch"
-			AutoGenerateColumns="False"
-			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-			IsReadOnly="True"
-			ScrollViewer.ScrollChanged="MainDataGrid_ScrollChanged">
-			<DataGrid.Columns>
-				<DataGridTextColumn
-					Binding="{Binding Date}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Date"
-					SortDirection="{x:Null}" />
-				<DataGridTextColumn
-					Binding="{Binding Delay}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Delay"
-					Visibility="Collapsed" />
-				<DataGridTextColumn
-					Binding="{Binding Status}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Status"
-					Visibility="Collapsed" />
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding MessageDisplay}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Message" />
-			</DataGrid.Columns>
-			<DataGrid.CellStyle>
-				<Style TargetType="DataGridCell">
-					<Setter Property="Padding" Value="4" />
-				</Style>
-			</DataGrid.CellStyle>
-		</DataGrid>
-	</Grid>
+    x:Class="x360ce.App.Controls.LogControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:x360ce.App.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="120"
+    d:DesignWidth="480"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+            <Label Name="LogSizeLabel" Content="Log Size:" />
+            <ComboBox Name="LogSizeComboBox" SelectionChanged="LogSizeComboBox_SelectionChanged">
+                <ComboBoxItem Content="200" Selector.IsSelected="True" />
+                <ComboBoxItem Content="500" />
+                <ComboBoxItem Content="1000" />
+                <ComboBoxItem Content="5000" />
+            </ComboBox>
+        </StackPanel>
+        <Button Name="ClearButton" HorizontalAlignment="Right" Click="ClearButton_Click">
+            <StackPanel>
+                <ContentControl Content="{StaticResource Icon_broom}" />
+                <Label Content="Clear" />
+            </StackPanel>
+        </Button>
+        <Border
+            Grid.Row="1"
+            Height="1"
+            BorderBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+            BorderThickness="1"
+            SnapsToDevicePixels="True" />
+        <DataGrid
+            xmlns:local="clr-namespace:x360ce.App.Converters"
+            x:Name="MainDataGrid"
+            Grid.Row="1"
+            Height="Auto"
+            HorizontalAlignment="Stretch"
+            AutoGenerateColumns="False"
+            Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+            IsReadOnly="True"
+            ScrollViewer.ScrollChanged="MainDataGrid_ScrollChanged">
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Binding="{Binding Date}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Date"
+                    SortDirection="{x:Null}" />
+                <DataGridTextColumn
+                    Binding="{Binding Delay}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Delay"
+                    Visibility="Collapsed" />
+                <DataGridTextColumn
+                    Binding="{Binding Status}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Status"
+                    Visibility="Collapsed" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding MessageDisplay}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Message" />
+            </DataGrid.Columns>
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="Padding" Value="4" />
+                </Style>
+            </DataGrid.CellStyle>
+        </DataGrid>
+    </Grid>
 
 </UserControl>
