--- a/x360ce.App.Beta/Controls/OptionsGeneralControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsGeneralControl.xaml
@@ -1,124 +1,115 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.OptionsGeneralControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Width="600"
-	Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<WrapPanel>
-			<GroupBox Header="Operation">
-				<StackPanel>
-					<CheckBox Name="AllowOnlyOneCopyCheckBox" Content="Allow only one copy of Application at a time" />
-					<CheckBox Name="IsProcessDPIAwareCheckBox" Content="Make Application Process DPI Aware" />
-					<CheckBox Name="AlwaysOnTopCheckBox" Content="Always on Top" />
-					<CheckBox Name="MinimizeToTrayCheckBox" Content="Minimize to Tray" />
-					<CheckBox Name="StartWithWindowsCheckBox" Content="Start with Windows:" />
-					<ComboBox Name="StartWithWindowsStateComboBox" MinWidth="75" HorizontalAlignment="Left" />
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Testing and Logging">
-				<StackPanel>
-					<CheckBox Name="ShowSettingsTabCheckBox" Content="Show [Settings] Tab" />
-					<CheckBox Name="ShowDevicesTabCheckBox" Content="Show [Devices] Tab" />
-					<CheckBox Name="ShowProgramsTabCheckBox" Content="Show [Programs] Tab" />
-					<CheckBox Name="XInputEnableCheckBox" Content="Enable XInput" />
-					<CheckBox Name="DebugModeCheckBox" Content="Debug Mode" />
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Direct Input Devices">
-				<StackPanel>
-					<CheckBox Name="ExcludeVirtualDevicesCheckBox" Content="Exclude Virtual Devices" />
-					<CheckBox Name="ExcludeSupplementalDevicesCheckBox" Content="Exclude Supplemental Devices" />
-					<CheckBox Name="UseDeviceBufferedDataCheckBox" Content="Use Device Buffered Data" />
-					<CheckBox Name="AcquireHiddenDevicesInExclusiveModeCheckBox" Content="Acquire Hidden Devices in Exclusive Mode" />
-					<CheckBox Name="AcquireMappedDevicesInExclusiveModeCheckBox" Content="Acquire Mapped Devices in Exclusive Mode" />
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Guide Button">
-				<StackPanel VerticalAlignment="Top" Orientation="Horizontal">
-					<Label Name="GuideButtonActionLabel" VerticalAlignment="Center" Content="Action:" />
-					<TextBox Name="GuideButtonActionTextBox" MinWidth="150" VerticalAlignment="Center" />
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Developing">
-				<StackPanel>
-					<CheckBox Name="ShowTestButtonCheckBox" Content="Show [Test...] Button" />
-					<CheckBox Name="ShowFormInfoCheckBox" Content="Show Form Info on CTRL+SHIFT+RButton" />
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Configuration">
-				<StackPanel VerticalAlignment="Top">
-					<CheckBox Name="AutoDetectForegroundWindowCheckBox" Content="Auto switch configuration when game focused" />
-					<CheckBox Name="IncludeProductsCheckBox" Content="Include [Products]" />
-					<StackPanel Orientation="Horizontal">
-						<Label Name="ConfigurationVersionLabel" VerticalAlignment="Center" Content="Version:" />
-						<TextBox
-							Name="ConfigurationVersionTextBox"
-							MinWidth="75"
-							VerticalAlignment="Center"
-							IsEnabled="False" />
-					</StackPanel>
+    x:Class="x360ce.App.Controls.OptionsGeneralControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="600"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.Resources>
+            <Style BasedOn="{StaticResource GroupBox_Default}" TargetType="GroupBox">
+                <Setter Property="Width" Value="295" />
+                <Setter Property="Margin" Value="3,3,0,0" />
+            </Style>
+        </Grid.Resources>
+        <WrapPanel>
+            <GroupBox Header="Operation">
+                <StackPanel>
+                    <CheckBox Name="AllowOnlyOneCopyCheckBox" Content="Allow only one copy of Application at a time" />
+                    <CheckBox Name="IsProcessDPIAwareCheckBox" Content="Make Application Process DPI Aware" />
+                    <CheckBox Name="AlwaysOnTopCheckBox" Content="Always on Top" />
+                    <CheckBox Name="MinimizeToTrayCheckBox" Content="Minimize to Tray" />
+                    <CheckBox Name="StartWithWindowsCheckBox" Content="Start with Windows:" />
+                    <ComboBox Name="StartWithWindowsStateComboBox" MinWidth="75" HorizontalAlignment="Left" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Testing and Logging">
+                <StackPanel>
+                    <CheckBox Name="ShowSettingsTabCheckBox" Content="Show [Settings] Tab" />
+                    <CheckBox Name="ShowDevicesTabCheckBox" Content="Show [Devices] Tab" />
+                    <CheckBox Name="ShowProgramsTabCheckBox" Content="Show [Programs] Tab" />
+                    <CheckBox Name="XInputEnableCheckBox" Content="Enable XInput" />
+                    <CheckBox Name="DebugModeCheckBox" Content="Debug Mode" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Direct Input Devices">
+                <StackPanel>
+                    <CheckBox Name="ExcludeVirtualDevicesCheckBox" Content="Exclude Virtual Devices" />
+                    <CheckBox Name="ExcludeSupplementalDevicesCheckBox" Content="Exclude Supplemental Devices" />
+                    <CheckBox Name="UseDeviceBufferedDataCheckBox" Content="Use Device Buffered Data" />
+                    <CheckBox Name="AcquireHiddenDevicesInExclusiveModeCheckBox" Content="Acquire Hidden Devices in Exclusive Mode" />
+                    <CheckBox Name="AcquireMappedDevicesInExclusiveModeCheckBox" Content="Acquire Mapped Devices in Exclusive Mode" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Guide Button">
+                <StackPanel VerticalAlignment="Top" Orientation="Horizontal">
+                    <Label Name="GuideButtonActionLabel" VerticalAlignment="Center" Content="Action:" />
+                    <TextBox Name="GuideButtonActionTextBox" MinWidth="150" VerticalAlignment="Center" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Developing">
+                <StackPanel>
+                    <CheckBox Name="ShowTestButtonCheckBox" Content="Show [Test...] Button" />
+                    <CheckBox Name="ShowFormInfoCheckBox" Content="Show Form Info on CTRL+SHIFT+RButton" />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Configuration">
+                <StackPanel VerticalAlignment="Top">
+                    <CheckBox Name="AutoDetectForegroundWindowCheckBox" Content="Auto switch configuration when game focused" />
+                    <CheckBox Name="IncludeProductsCheckBox" Content="Include [Products]" />
+                    <StackPanel Orientation="Horizontal">
+                        <Label Name="ConfigurationVersionLabel" VerticalAlignment="Center" Content="Version:" />
+                        <TextBox
+                            Name="ConfigurationVersionTextBox"
+                            MinWidth="75"
+                            VerticalAlignment="Center"
+                            IsEnabled="False" />
+                    </StackPanel>
 
-				</StackPanel>
-			</GroupBox>
-			<TabControl x:Name="MainTabControl" Margin="3,3,3,3" Padding="0,0,0,0">
-				<TabItem x:Name="SettingsTabPage" Header="Game Scan Locations">
-					<StackPanel>
-						<Grid VerticalAlignment="Stretch">
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-								<RowDefinition Height="*" />
-							</Grid.RowDefinitions>
-							<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
-								<ToolBar Style="{StaticResource MainToolBar}">
-									<Button
-										Name="LocationAddButton"
-										HorizontalAlignment="Right"
-										Click="LocationAddButton_Click"
-										Style="{StaticResource ToolBarButton}">
-										<StackPanel Style="{StaticResource ButtonStackPanel}">
-											<ContentControl Content="{StaticResource Icon_add}" Style="{StaticResource ButtonContentControl}" />
-											<Label Content="Add..." Style="{StaticResource ButtonLabel}" />
-										</StackPanel>
-									</Button>
-									<Button
-										Name="LocationRemoveButton"
-										HorizontalAlignment="Right"
-										Click="LocationRemoveButton_Click"
-										Style="{StaticResource ToolBarButton}">
-										<StackPanel Style="{StaticResource ButtonStackPanel}">
-											<ContentControl Content="{StaticResource Icon_remove}" Style="{StaticResource ButtonContentControl}" />
-											<Label Content="Remove" Style="{StaticResource ButtonLabel}" />
-										</StackPanel>
-									</Button>
-									<Button
-										Name="LocationRefreshButton"
-										HorizontalAlignment="Right"
-										Click="LocationRefreshButton_Click"
-										Style="{StaticResource ToolBarButton}">
-										<StackPanel Style="{StaticResource ButtonStackPanel}">
-											<ContentControl Content="{StaticResource Icon_Refresh}" Style="{StaticResource ButtonContentControl}" />
-											<Label Content="Refresh" Style="{StaticResource ButtonLabel}" />
-										</StackPanel>
-									</Button>
-								</ToolBar>
-							</ToolBarPanel>
-							<ListBox
-								Name="GameScanLocationsListBox"
-								Grid.Row="1"
-								Width="480"
-								Height="100"
-								BorderThickness="0" />
-						</Grid>
-					</StackPanel>
-				</TabItem>
-			</TabControl>
-		</WrapPanel>
-	</Grid>
+                </StackPanel>
+            </GroupBox>
+            <TabControl x:Name="MainTabControl" Margin="3,3,3,3" Padding="0,0,0,0">
+                <TabItem x:Name="SettingsTabPage" Header="Game Scan Locations">
+                    <StackPanel>
+                        <Grid VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="*" />
+                            </Grid.RowDefinitions>
+                            <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                                <Button Name="LocationAddButton" Click="LocationAddButton_Click">
+                                    <StackPanel>
+                                        <ContentControl Content="{StaticResource Icon_add}" />
+                                        <Label Content="Add..." />
+                                    </StackPanel>
+                                </Button>
+                                <Button Name="LocationRemoveButton" Click="LocationRemoveButton_Click">
+                                    <StackPanel>
+                                        <ContentControl Content="{StaticResource Icon_remove}" />
+                                        <Label Content="Remove" />
+                                    </StackPanel>
+                                </Button>
+                                <Button Name="LocationRefreshButton" Click="LocationRefreshButton_Click">
+                                    <StackPanel>
+                                        <ContentControl Content="{StaticResource Icon_Refresh}" />
+                                        <Label Content="Refresh" />
+                                    </StackPanel>
+                                </Button>
+                            </StackPanel>
+                            <ListBox
+                                Name="GameScanLocationsListBox"
+                                Grid.Row="1"
+                                Width="480"
+                                Height="100"
+                                BorderThickness="0" />
+                        </Grid>
+                    </StackPanel>
+                </TabItem>
+            </TabControl>
+        </WrapPanel>
+    </Grid>
 </UserControl>
