--- a/x360ce.App.Beta/Controls/OptionsHidGuardianControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsHidGuardianControl.xaml
@@ -35,14 +35,13 @@
 					Grid.Row="0"
 					Grid.Column="1"
 					Content="Configure automatically - auto-hide Direct Input device when emulated." />
-				<Button
+                <Button
 					Name="HidGuardianRefreshButton"
 					Grid.Row="0"
 					Grid.Column="3"
-					Click="RefreshButton_Click">
-					Refresh
-				</Button>
-				<Label Name="HidGuardianLabel" Grid.Row="1" Grid.Column="0">HID Guardian</Label>
+					Click="RefreshButton_Click"
+                    Content="Refresh" />
+                <Label Name="HidGuardianLabel" Grid.Row="1" Grid.Column="0">HID Guardian</Label>
 				<TextBox
 					Name="StatusTextBox"
 					Grid.Row="1"
