--- a/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
+++ b/x360ce.App.Beta/Controls/OptionsInternetControl.xaml
@@ -1,160 +1,158 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.OptionsInternetControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="440"
-	d:DesignWidth="640"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-		</Grid.RowDefinitions>
-		<WrapPanel Orientation="Horizontal">
-			<GroupBox Header="Online Account - Login">
-				<Grid>
-					<Grid.RowDefinitions>
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
-						<RowDefinition Height="Auto" />
-					</Grid.RowDefinitions>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="Auto" />
-						<ColumnDefinition Width="Auto" />
-					</Grid.ColumnDefinitions>
-					<Label
-						Name="UsernameLabel"
-						Grid.Row="0"
-						Grid.Column="0"
-						Content="Username (E-mail)" />
-					<TextBox Name="UsernameTextBox" Grid.Row="0" Grid.Column="1" />
-					<Label
-						Name="PasswordLabel"
-						Grid.Row="1"
-						Grid.Column="0"
-						Content="Password" />
-					<TextBox Name="PasswordTextBox" Grid.Row="1" Grid.Column="1" />
-					<StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
-						<Button Name="ResetButton" Click="ResetButton_Click" Content="Reset..." />
-						<Button Name="CreateButton" Click="CreateButton_Click" Content="Create..." />
-						<Button Name="LoginButton" Click="LoginButton_Click" Content="Log In" />
-					</StackPanel>
-				</Grid>
-			</GroupBox>
-			<GroupBox Header="Games / Cloud - Default Settings">
-				<StackPanel>
-					<StackPanel />
-					<Label Name="MinimumInstanceCountLabel">
-						Default Settings Minimum Instances
-					</Label>
-					<StackPanel Orientation="Horizontal">
-						<JcControls:NumericUpDown x:Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
-						<CheckBox Name="GetProgramsIncludeEnabledCheckBox">
-							Include Enabled
-						</CheckBox>
-					</StackPanel>
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Update Options">
-				<StackPanel Orientation="Horizontal">
-					<CheckBox Name="CheckForUpdatesCheckBox" Content="Check for updates on startup" />
-					<Button Name="CheckUpdatesButton" Click="CheckUpdatesButton_Click">
-						Check...
-					</Button>
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Internet">
-				<StackPanel Orientation="Vertical">
-					<StackPanel Orientation="Horizontal">
-						<CheckBox Name="InternetAutoSaveCheckBox" Content="Save Settings to Cloud" />
-						<CheckBox Name="InternetAutoLoadCheckBox" Content="Load Settings from Cloud" />
-						<CheckBox Name="InternetFeaturesCheckBox" Content="Enable Internet Features" />
-					</StackPanel>
-					<Grid HorizontalAlignment="Stretch">
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto" />
-							<ColumnDefinition Width="*" />
-						</Grid.ColumnDefinitions>
-						<Label
-							Name="WebServiceUrlLabel"
-							Grid.Column="0"
-							HorizontalAlignment="Left"
-							Content="Web Service URL" />
-						<ComboBox Name="InternetDatabaseUrlComboBox" Grid.Column="1" IsEditable="True" />
-					</Grid>
-				</StackPanel>
-			</GroupBox>
-			<GroupBox Header="Online Account - Anonymous Computer ID and Profile ID will be used by default">
-				<StackPanel>
-					<Grid HorizontalAlignment="Stretch">
-						<Grid.RowDefinitions>
-							<RowDefinition />
-							<RowDefinition />
-							<RowDefinition />
-							<RowDefinition />
-						</Grid.RowDefinitions>
-						<Grid.ColumnDefinitions>
-							<ColumnDefinition Width="Auto" />
-							<ColumnDefinition Width="*" />
-							<ColumnDefinition Width="Auto" />
-						</Grid.ColumnDefinitions>
-						<Label
-							Name="ProfilePathLabel"
-							Grid.Row="0"
-							Grid.Column="0"
-							Content="Profile Path" />
-						<TextBox
-							Name="ProfilePathTextBox"
-							Grid.Row="0"
-							Grid.Column="1"
-							IsReadOnly="True" />
-						<Button
-							Name="OpenSettingsFolderButton"
-							Grid.Row="0"
-							Grid.Column="2"
-							Click="OpenSettingsFolderButton_Click"
-							Content="Open" />
-						<Label
-							Name="ProfileIdLabel"
-							Grid.Row="1"
-							Grid.Column="0"
-							Content="Profile ID" />
-						<TextBox
-							Name="ProfileIdTextBox"
-							Grid.Row="1"
-							Grid.Column="1"
-							IsReadOnly="True" />
+    x:Class="x360ce.App.Controls.OptionsInternetControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:JcControls="clr-namespace:JocysCom.ClassLibrary.Controls;assembly=x360ce.Engine"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="440"
+    d:DesignWidth="640"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <WrapPanel Orientation="Horizontal">
+            <GroupBox Header="Online Account - Login">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <Label
+                        Name="UsernameLabel"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Content="Username (E-mail)" />
+                    <TextBox Name="UsernameTextBox" Grid.Row="0" Grid.Column="1" />
+                    <Label
+                        Name="PasswordLabel"
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Content="Password" />
+                    <TextBox Name="PasswordTextBox" Grid.Row="1" Grid.Column="1" />
+                    <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal">
+                        <Button Name="ResetButton" Click="ResetButton_Click" Content="Reset..." />
+                        <Button Name="CreateButton" Click="CreateButton_Click" Content="Create..." />
+                        <Button Name="LoginButton" Click="LoginButton_Click" Content="Log In" />
+                    </StackPanel>
+                </Grid>
+            </GroupBox>
+            <GroupBox Header="Games / Cloud - Default Settings">
+                <StackPanel>
+                    <StackPanel />
+                    <Label Name="MinimumInstanceCountLabel">
+                        Default Settings Minimum Instances
+                    </Label>
+                    <StackPanel Orientation="Horizontal">
+                        <JcControls:NumericUpDown x:Name="GetProgramsMinInstancesUpDown" MinWidth="75" />
+                        <CheckBox Name="GetProgramsIncludeEnabledCheckBox">
+                            Include Enabled
+                        </CheckBox>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Update Options">
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Name="CheckForUpdatesCheckBox" Content="Check for updates on startup" />
+                    <Button Name="CheckUpdatesButton" Click="CheckUpdatesButton_Click" Content="Check..." />
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Internet">
+                <StackPanel Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox Name="InternetAutoSaveCheckBox" Content="Save Settings to Cloud" />
+                        <CheckBox Name="InternetAutoLoadCheckBox" Content="Load Settings from Cloud" />
+                        <CheckBox Name="InternetFeaturesCheckBox" Content="Enable Internet Features" />
+                    </StackPanel>
+                    <Grid HorizontalAlignment="Stretch">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Label
+                            Name="WebServiceUrlLabel"
+                            Grid.Column="0"
+                            HorizontalAlignment="Left"
+                            Content="Web Service URL" />
+                        <ComboBox Name="InternetDatabaseUrlComboBox" Grid.Column="1" IsEditable="True" />
+                    </Grid>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Online Account - Anonymous Computer ID and Profile ID will be used by default">
+                <StackPanel>
+                    <Grid HorizontalAlignment="Stretch">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                        </Grid.ColumnDefinitions>
+                        <Label
+                            Name="ProfilePathLabel"
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Content="Profile Path" />
+                        <TextBox
+                            Name="ProfilePathTextBox"
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            IsReadOnly="True" />
+                        <Button
+                            Name="OpenSettingsFolderButton"
+                            Grid.Row="0"
+                            Grid.Column="2"
+                            Click="OpenSettingsFolderButton_Click"
+                            Content="Open" />
+                        <Label
+                            Name="ProfileIdLabel"
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Content="Profile ID" />
+                        <TextBox
+                            Name="ProfileIdTextBox"
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            IsReadOnly="True" />
 
-						<Label
-							Name="ComputerIdLabel"
-							Grid.Row="2"
-							Grid.Column="0"
-							Content="Computer ID" />
-						<TextBox
-							Name="ComputerIdTextBox"
-							Grid.Row="2"
-							Grid.Column="1"
-							IsReadOnly="True" />
-						<Label
-							Name="ComputerDiskLabel"
-							Grid.Row="3"
-							Grid.Column="0"
-							Content="Computer Disk" />
-						<TextBox
-							Name="ComputerDiskTextBox"
-							Grid.Row="3"
-							Grid.Column="1"
-							IsReadOnly="True" />
-					</Grid>
-				</StackPanel>
-			</GroupBox>
-		</WrapPanel>
-	</Grid>
+                        <Label
+                            Name="ComputerIdLabel"
+                            Grid.Row="2"
+                            Grid.Column="0"
+                            Content="Computer ID" />
+                        <TextBox
+                            Name="ComputerIdTextBox"
+                            Grid.Row="2"
+                            Grid.Column="1"
+                            IsReadOnly="True" />
+                        <Label
+                            Name="ComputerDiskLabel"
+                            Grid.Row="3"
+                            Grid.Column="0"
+                            Content="Computer Disk" />
+                        <TextBox
+                            Name="ComputerDiskTextBox"
+                            Grid.Row="3"
+                            Grid.Column="1"
+                            IsReadOnly="True" />
+                    </Grid>
+                </StackPanel>
+            </GroupBox>
+        </WrapPanel>
+    </Grid>
 </UserControl>
