--- a/x360ce.App.Beta/Controls/PadFootControl.xaml
+++ b/x360ce.App.Beta/Controls/PadFootControl.xaml
@@ -1,108 +1,65 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.PadFootControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	MinWidth="740"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid>
-		<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-			<Button
-				Name="GameControllersButton"
-				HorizontalAlignment="Right"
-				Click="GameControllersButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<Label Content="GameControllers..." Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="DxTweakButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="DxTweakButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<Label Content="DX Tweak..." Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-		</StackPanel>
-
-		<StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
-			<Label Content="Preset: " />
-			<Button
-				Name="CopyButton"
-				HorizontalAlignment="Right"
-				Click="CopyButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_copy}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Copy" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="PasteButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="PasteButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_clipboard_paste}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Paste" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="LoadButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="LoadButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_download}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Load..." Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-
-			<Button
-				Name="AutoButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="AutoButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_window_gear}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Auto" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="ClearButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="ClearButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_broom}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Clear" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-			<Button
-				Name="ResetButton"
-				Margin="8,0,0,0"
-				HorizontalAlignment="Right"
-				Click="ResetButton_Click"
-				Style="{StaticResource ToolBarButton}">
-				<StackPanel Style="{StaticResource ButtonStackPanel}">
-					<ContentControl Content="{StaticResource Icon_Reset}" Style="{StaticResource ButtonContentControl}" />
-					<Label Content="Reset" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</Button>
-
-
-
-		</StackPanel>
-	</Grid>
+    x:Class="x360ce.App.Controls.PadFootControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    MinWidth="740"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+            <Button
+                Name="GameControllersButton"
+                Margin="3"
+                Click="GameControllersButton_Click"
+                Content="GameControllers..." />
+            <Button
+                Name="DxTweakButton"
+                Margin="0,3,3,3"
+                Click="DxTweakButton_Click"
+                Content="DX Tweak..." />
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+            <Label Content="Preset: " />
+            <Button Name="CopyButton" Click="CopyButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_copy}" />
+                    <Label Content="Copy" />
+                </StackPanel>
+            </Button>
+            <Button Name="PasteButton" Margin="0,3,3,3" Click="PasteButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_clipboard_paste}" />
+                    <Label Content="Paste" />
+                </StackPanel>
+            </Button>
+            <Button Name="LoadButton" Margin="0,3,3,3" Click="LoadButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_download}" />
+                    <Label Content="Load..." />
+                </StackPanel>
+            </Button>
+            <Button Name="AutoButton" Margin="0,3,3,3" Click="AutoButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_window_gear}" />
+                    <Label Content="Auto" />
+                </StackPanel>
+            </Button>
+            <Button Name="ClearButton" Margin="0,3,3,3" Click="ClearButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_broom}" />
+                    <Label Content="Clear" />
+                </StackPanel>
+            </Button>
+            <Button Name="ResetButton" Margin="0,3,3,3" Click="ResetButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_Reset}" />
+                    <Label Content="Reset" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
+    </Grid>
 </UserControl>
