--- a/x360ce.App.Beta/Controls/PresetsListControl.xaml
+++ b/x360ce.App.Beta/Controls/PresetsListControl.xaml
@@ -16,21 +16,15 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
 		</Grid.RowDefinitions>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
 				<Button
 					Name="RefreshButton"
 					HorizontalAlignment="Right"
-					Click="RefreshButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_Refresh}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Refresh" Style="{StaticResource ButtonLabel}" />
+					Click="RefreshButton_Click">
+					<StackPanel>
+						<ContentControl Content="{StaticResource Icon_Refresh}" />
+						<Label Content="Refresh" />
 					</StackPanel>
 				</Button>
-			</ToolBar>
-		</ToolBarPanel>
-
 		<Border
 			Grid.Row="1"
 			Height="1"
