--- a/x360ce.App.Beta/Controls/UserProgramListControl.xaml
+++ b/x360ce.App.Beta/Controls/UserProgramListControl.xaml
@@ -1,166 +1,138 @@
 ﻿<UserControl
-	x:Class="x360ce.App.Controls.UserProgramListControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:converters="clr-namespace:x360ce.App.Converters"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="160"
-	d:DesignWidth="640"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<Grid VerticalAlignment="Stretch">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="*" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Left" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
-				<Button
-					Name="ScanButton"
-					HorizontalAlignment="Right"
-					Click="ScanButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_magnifying_glass}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Scan" Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Name="AddButton"
-					HorizontalAlignment="Right"
-					Click="AddButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_plus}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Add..." Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Name="DeleteButton"
-					HorizontalAlignment="Right"
-					Click="DeleteButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_delete}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Delete" Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Name="SaveButton"
-					HorizontalAlignment="Right"
-					Click="SaveButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_save}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Save" Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Menu x:Name="ShowMenu">
-					<MenuItem
-						x:Name="ShowMenuItem"
-						Margin="3,3,3,3"
-						Padding="3,3,3,3"
-						Header="Show: All">
-						<MenuItem.Icon>
-							<ContentControl Content="{StaticResource Icon_radio_button_group}" Style="{StaticResource ButtonContentControl}" />
-						</MenuItem.Icon>
-						<MenuItem Click="ShowMenuItem_Click" Header="Show: All">
-							<MenuItem.Icon>
-								<ContentControl Content="{StaticResource Icon_radio_button_group}" Style="{StaticResource ButtonContentControl}" />
-							</MenuItem.Icon>
-						</MenuItem>
-						<MenuItem Click="ShowMenuItem_Click" Header="Show: Enabled">
-							<MenuItem.Icon>
-								<ContentControl Content="{StaticResource Icon_radio_button_selected}" Style="{StaticResource ButtonContentControl}" />
-							</MenuItem.Icon>
-						</MenuItem>
-						<MenuItem Click="ShowMenuItem_Click" Header="Show: Disabled">
-							<MenuItem.Icon>
-								<ContentControl Content="{StaticResource Icon_radio_button_unselected}" Style="{StaticResource ButtonContentControl}" />
-							</MenuItem.Icon>
-						</MenuItem>
-					</MenuItem>
-				</Menu>
-			</ToolBar>
-		</ToolBarPanel>
-		<ToolBarPanel Grid.Row="0" HorizontalAlignment="Right" Style="{StaticResource MainToolBarPanel}">
-			<ToolBar Style="{StaticResource MainToolBar}">
-				<Button
-					Name="OpenButton"
-					HorizontalAlignment="Right"
-					Click="OpenButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_FolderOpen}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Open..." Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-				<Button
-					Name="StartButton"
-					HorizontalAlignment="Right"
-					Click="StartButton_Click"
-					Style="{StaticResource ToolBarButton}">
-					<StackPanel Style="{StaticResource ButtonStackPanel}">
-						<ContentControl Content="{StaticResource Icon_media_play}" Style="{StaticResource ButtonContentControl}" />
-						<Label Content="Start" Style="{StaticResource ButtonLabel}" />
-					</StackPanel>
-				</Button>
-			</ToolBar>
-		</ToolBarPanel>
-		<Border
-			Grid.Row="1"
-			Height="1"
-			BorderBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
-			BorderThickness="1"
-			SnapsToDevicePixels="True" />
-		<DataGrid
-			xmlns:local="clr-namespace:x360ce.App.Converters"
-			x:Name="MainDataGrid"
-			Grid.Row="1"
-			Height="Auto"
-			HorizontalAlignment="Stretch"
-			AutoGenerateColumns="False"
-			Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-			IsReadOnly="True"
-			KeyDown="MainDataGrid_KeyDown"
-			SelectionChanged="MainDataGrid_SelectionChanged">
-			<DataGrid.Columns>
-				<DataGridCheckBoxColumn Binding="{Binding IsEnabled}" EditingElementStyle="{StaticResource CheckBoxCell}" ElementStyle="{StaticResource CheckBoxCell}" />
-				<DataGridTextColumn
-					Binding="{Binding FileName}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="File Name" />
-				<DataGridTextColumn
-					Binding="{Binding FileProductName}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Product Name" />
-				<DataGridTextColumn
-					Binding="{Binding ProcessorArchitecture}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="Platform" />
-				<DataGridTextColumn
-					Width="*"
-					Binding="{Binding FullPath}"
-					EditingElementStyle="{StaticResource TextBoxCell}"
-					ElementStyle="{StaticResource TextBlockCell}"
-					Header="File Folder" />
-			</DataGrid.Columns>
-			<DataGrid.CellStyle>
-				<Style TargetType="DataGridCell">
-					<Setter Property="Padding" Value="4" />
-				</Style>
-			</DataGrid.CellStyle>
-		</DataGrid>
-		<StackPanel x:Name="ScanProgressPanel" Grid.Row="2">
-			<TextBlock x:Name="ScanProgressLevel0Label" Text="[ScanProgressLevel0Label]" />
-			<TextBlock x:Name="ScanProgressLevel1Label" Text="[ScanProgressLevel1Label]" />
-		</StackPanel>
-	</Grid>
+    x:Class="x360ce.App.Controls.UserProgramListControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:x360ce.App.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="160"
+    d:DesignWidth="640"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <Grid VerticalAlignment="Stretch">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
+            <Button Name="ScanButton" Click="ScanButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_magnifying_glass}" />
+                    <Label Content="Scan" />
+                </StackPanel>
+            </Button>
+            <Button Name="AddButton" Margin="0,3,3,3" Click="AddButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_plus}" />
+                    <Label Content="Add..." />
+                </StackPanel>
+            </Button>
+            <Button Name="DeleteButton" Click="DeleteButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_delete}" />
+                    <Label Content="Delete" />
+                </StackPanel>
+            </Button>
+            <Button Name="SaveButton" Margin="0,3,3,3" Click="SaveButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_save}" />
+                    <Label Content="Save" />
+                </StackPanel>
+            </Button>
+            <Menu x:Name="ShowMenu" VerticalAlignment="Center">
+                <MenuItem
+                    x:Name="ShowMenuItem"
+                    Margin="3,3,3,3"
+                    Padding="3,3,3,3"
+                    Header="Show: All">
+                    <MenuItem.Icon>
+                        <ContentControl Content="{StaticResource Icon_radio_button_group}" />
+                    </MenuItem.Icon>
+                    <MenuItem Click="ShowMenuItem_Click" Header="Show: All">
+                        <MenuItem.Icon>
+                            <ContentControl Content="{StaticResource Icon_radio_button_group}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Click="ShowMenuItem_Click" Header="Show: Enabled">
+                        <MenuItem.Icon>
+                            <ContentControl Content="{StaticResource Icon_radio_button_selected}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Click="ShowMenuItem_Click" Header="Show: Disabled">
+                        <MenuItem.Icon>
+                            <ContentControl Content="{StaticResource Icon_radio_button_unselected}" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                </MenuItem>
+            </Menu>
+        </StackPanel>
+        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Name="OpenButton" Click="OpenButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_FolderOpen}" />
+                    <Label Content="Open..." />
+                </StackPanel>
+            </Button>
+            <Button Name="StartButton" Margin="0,3,3,3" Click="StartButton_Click">
+                <StackPanel>
+                    <ContentControl Content="{StaticResource Icon_media_play}" />
+                    <Label Content="Start" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
+        <Border
+            Grid.Row="1"
+            Height="1"
+            BorderBrush="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}"
+            BorderThickness="1"
+            SnapsToDevicePixels="True" />
+        <DataGrid
+            xmlns:local="clr-namespace:x360ce.App.Converters"
+            x:Name="MainDataGrid"
+            Grid.Row="1"
+            Height="Auto"
+            HorizontalAlignment="Stretch"
+            AutoGenerateColumns="False"
+            Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+            IsReadOnly="True"
+            KeyDown="MainDataGrid_KeyDown"
+            SelectionChanged="MainDataGrid_SelectionChanged">
+            <DataGrid.Columns>
+                <DataGridCheckBoxColumn Binding="{Binding IsEnabled}" EditingElementStyle="{StaticResource CheckBoxCell}" ElementStyle="{StaticResource CheckBoxCell}" />
+                <DataGridTextColumn
+                    Binding="{Binding FileName}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="File Name" />
+                <DataGridTextColumn
+                    Binding="{Binding FileProductName}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Product Name" />
+                <DataGridTextColumn
+                    Binding="{Binding ProcessorArchitecture}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="Platform" />
+                <DataGridTextColumn
+                    Width="*"
+                    Binding="{Binding FullPath}"
+                    EditingElementStyle="{StaticResource TextBoxCell}"
+                    ElementStyle="{StaticResource TextBlockCell}"
+                    Header="File Folder" />
+            </DataGrid.Columns>
+            <DataGrid.CellStyle>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="Padding" Value="4" />
+                </Style>
+            </DataGrid.CellStyle>
+        </DataGrid>
+        <StackPanel x:Name="ScanProgressPanel" Grid.Row="2">
+            <TextBlock x:Name="ScanProgressLevel0Label" Text="[ScanProgressLevel0Label]" />
+            <TextBlock x:Name="ScanProgressLevel1Label" Text="[ScanProgressLevel1Label]" />
+        </StackPanel>
+    </Grid>
 </UserControl>
