--- a/x360ce.App.Beta/MainBodyControl.xaml
+++ b/x360ce.App.Beta/MainBodyControl.xaml
@@ -1,114 +1,90 @@
 ﻿<UserControl
-	x:Class="x360ce.App.MainBodyControl"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:issues="clr-namespace:JocysCom.ClassLibrary.Controls.IssuesControl;assembly=x360ce.Engine"
-	xmlns:local="clr-namespace:x360ce.App.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="700"
-	d:DesignWidth="800"
-	Loaded="UserControl_Loaded"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<TabControl Name="MainTabControl" SelectionChanged="MainTabControl_SelectionChanged">
-		<TabItem Name="Pad1TabPage">
-			<TabItem.Header>
-				<StackPanel Orientation="Horizontal">
-					<ContentControl
-						x:Name="Pad1TabIcon"
-						Width="12"
-						Height="12"
-						Content="{StaticResource Icon_square_grey}"
-						Style="{StaticResource ButtonContentControl}" />
-					<Label Padding="0,0,0,0" Content="PAD 1" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</TabItem.Header>
-			<local:PadControl x:Name="Pad1Panel" />
-		</TabItem>
-		<TabItem Name="Pad2TabPage" HorizontalAlignment="Right">
-			<TabItem.Header>
-				<StackPanel Orientation="Horizontal">
-					<ContentControl
-						x:Name="Pad2TabIcon"
-						Width="12"
-						Height="12"
-						Content="{StaticResource Icon_square_grey}"
-						Style="{StaticResource ButtonContentControl}" />
-					<Label Padding="0,0,0,0" Content="PAD 2" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</TabItem.Header>
-			<local:PadControl x:Name="Pad2Panel" />
-		</TabItem>
-		<TabItem Name="Pad3TabPage">
-			<TabItem.Header>
-				<StackPanel Orientation="Horizontal">
-					<ContentControl
-						x:Name="Pad3TabIcon"
-						Width="12"
-						Height="12"
-						Content="{StaticResource Icon_square_grey}"
-						Style="{StaticResource ButtonContentControl}" />
-					<Label Padding="0,0,0,0" Content="PAD 3" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</TabItem.Header>
-			<local:PadControl x:Name="Pad3Panel" />
-		</TabItem>
-		<TabItem Name="Pad4TabPage">
-			<TabItem.Header>
-				<StackPanel Orientation="Horizontal">
-					<ContentControl
-						x:Name="Pad4TabIcon"
-						Width="12"
-						Height="12"
-						Content="{StaticResource Icon_square_grey}"
-						Style="{StaticResource ButtonContentControl}" />
-					<Label Padding="0,0,0,0" Content="PAD 4" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</TabItem.Header>
-			<local:PadControl x:Name="Pad4Panel" />
-		</TabItem>
-		<TabItem Name="OptionsTabPage" Header="Options">
-			<Grid>
-				<Grid.RowDefinitions>
-					<RowDefinition Height="*" />
-				</Grid.RowDefinitions>
-				<local:OptionsControl x:Name="OptionsPanel" Margin="3,3,3,3" />
-			</Grid>
-		</TabItem>
-		<TabItem Name="GamesTabPage" Header="Games">
-			<local:UserProgramsControl x:Name="GamesPanel" />
-		</TabItem>
-		<TabItem Name="ProgramsTabPage" Header="Programs">
-			<local:ProgramsControl x:Name="ProgramsPanel" />
-		</TabItem>
-		<TabItem Name="DevicesTabPage" Header="Devices">
-			<local:UserDevicesControl x:Name="DevicesPanel" />
-		</TabItem>
-		<TabItem Name="SettingsTabPage" Header="Settings">
-			<local:UserSettingListControl x:Name="SettingsPanel" />
-		</TabItem>
-		<TabItem Name="CloudTabPage" Header="Cloud">
-			<local:CloudControl x:Name="CloudPanel" />
-		</TabItem>
-		<TabItem Name="HelpTabPage" Header="Help">
-			<RichTextBox x:Name="HelpRichTextBox" BorderThickness="0" />
-		</TabItem>
-		<TabItem Name="AboutTabPage" Header="About">
-			<local:AboutUserControl x:Name="AboutPanel" />
-		</TabItem>
-		<TabItem Name="IssuesTabPage">
-			<TabItem.Header>
-				<StackPanel Orientation="Horizontal">
-					<ContentControl
-						Width="12"
-						Height="12"
-						Content="{StaticResource Icon_square_grey}"
-						Style="{StaticResource ButtonContentControl}" />
-					<Label Padding="0,0,0,0" Content="Issues" Style="{StaticResource ButtonLabel}" />
-				</StackPanel>
-			</TabItem.Header>
-			<issues:IssuesControl x:Name="IssuesPanel" />
-		</TabItem>
-	</TabControl>
+    x:Class="x360ce.App.MainBodyControl"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:issues="clr-namespace:JocysCom.ClassLibrary.Controls.IssuesControl;assembly=x360ce.Engine"
+    xmlns:local="clr-namespace:x360ce.App.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="700"
+    d:DesignWidth="800"
+    Loaded="UserControl_Loaded"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <TabControl Name="MainTabControl" SelectionChanged="MainTabControl_SelectionChanged">
+        <TabItem Name="Pad1TabPage">
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <ContentControl x:Name="Pad1TabIcon" Content="{StaticResource Icon_square_grey}" />
+                    <Label Content="PAD 1" />
+                </StackPanel>
+            </TabItem.Header>
+            <local:PadControl x:Name="Pad1Panel" />
+        </TabItem>
+        <TabItem Name="Pad2TabPage">
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <ContentControl x:Name="Pad2TabIcon" Content="{StaticResource Icon_square_grey}" />
+                    <Label Content="PAD 2" />
+                </StackPanel>
+            </TabItem.Header>
+            <local:PadControl x:Name="Pad2Panel" />
+        </TabItem>
+        <TabItem Name="Pad3TabPage">
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <ContentControl x:Name="Pad3TabIcon" Content="{StaticResource Icon_square_grey}" />
+                    <Label Content="PAD 3" />
+                </StackPanel>
+            </TabItem.Header>
+            <local:PadControl x:Name="Pad3Panel" />
+        </TabItem>
+        <TabItem Name="Pad4TabPage">
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <ContentControl x:Name="Pad4TabIcon" Content="{StaticResource Icon_square_grey}" />
+                    <Label Content="PAD 4" />
+                </StackPanel>
+            </TabItem.Header>
+            <local:PadControl x:Name="Pad4Panel" />
+        </TabItem>
+        <TabItem Name="OptionsTabPage" Header="Options">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <local:OptionsControl x:Name="OptionsPanel" Margin="3" />
+            </Grid>
+        </TabItem>
+        <TabItem Name="GamesTabPage" Header="Games">
+            <local:UserProgramsControl x:Name="GamesPanel" />
+        </TabItem>
+        <TabItem Name="ProgramsTabPage" Header="Programs">
+            <local:ProgramsControl x:Name="ProgramsPanel" />
+        </TabItem>
+        <TabItem Name="DevicesTabPage" Header="Devices">
+            <local:UserDevicesControl x:Name="DevicesPanel" />
+        </TabItem>
+        <TabItem Name="SettingsTabPage" Header="Settings">
+            <local:UserSettingListControl x:Name="SettingsPanel" />
+        </TabItem>
+        <TabItem Name="CloudTabPage" Header="Cloud">
+            <local:CloudControl x:Name="CloudPanel" />
+        </TabItem>
+        <TabItem Name="HelpTabPage" Header="Help">
+            <RichTextBox x:Name="HelpRichTextBox" BorderThickness="0" />
+        </TabItem>
+        <TabItem Name="AboutTabPage" Header="About">
+            <local:AboutUserControl x:Name="AboutPanel" />
+        </TabItem>
+        <TabItem Name="IssuesTabPage">
+            <TabItem.Header>
+                <StackPanel Orientation="Horizontal">
+                    <ContentControl Content="{StaticResource Icon_square_grey}" />
+                    <Label Content="Issues" />
+                </StackPanel>
+            </TabItem.Header>
+            <issues:IssuesControl x:Name="IssuesPanel" />
+        </TabItem>
+    </TabControl>
 </UserControl>
