--- a/x360ce.App.Beta/MainWindow.xaml
+++ b/x360ce.App.Beta/MainWindow.xaml
@@ -1,14 +1,15 @@
 ﻿<Window
-	x:Class="x360ce.App.MainWindow"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:x360ce.App"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Width="820"
-	Height="820"
-	Loaded="Window_Loaded"
-	Unloaded="Window_Unloaded"
-	mc:Ignorable="d">
-	<local:MainControl x:Name="MainPanel" />
+    x:Class="x360ce.App.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:x360ce.App"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Width="900"
+    Height="900"
+    Background="{StaticResource BackgroundLight}"
+    Loaded="Window_Loaded"
+    Unloaded="Window_Unloaded"
+    mc:Ignorable="d">
+    <local:MainControl x:Name="MainPanel" />
 </Window>
