--- a/x360ce.Engine/JocysCom/Controls/NumericUpDown.xaml
+++ b/x360ce.Engine/JocysCom/Controls/NumericUpDown.xaml
@@ -1,115 +1,140 @@
 ﻿<UserControl
-	x:Class="JocysCom.ClassLibrary.Controls.NumericUpDown"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:JocysCom.ClassLibrary.Controls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	x:Name="This"
-	Margin="0"
-	Padding="0"
-	Loaded="UserControl_Loaded"
-	SnapsToDevicePixels="True"
-	Unloaded="UserControl_Unloaded"
-	mc:Ignorable="d">
-	<UserControl.Resources>
-		<local:NumericUpDownStyleConverter x:Key="_NumericUpDownStyleConverter" />
-		<local:NumericUpDownValueConverter x:Key="_NumericUpDownValueConverter" />
-	</UserControl.Resources>
-	<Grid Background="{DynamicResource {x:Static SystemColors.WindowFrameBrushKey}}">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="*" />
-			<ColumnDefinition Width="Auto" />
-		</Grid.ColumnDefinitions>
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<TextBox
-			x:Name="TBox"
-			MinWidth="75"
-			Margin="0"
-			VerticalAlignment="Center"
-			x:FieldModifier="public"
-			MouseWheel="TBox_MouseWheel"
-			PreviewKeyDown="TBox_PreviewKeyDown"
-			SizeChanged="TextBox_SizeChanged"
-			TextAlignment="Right"
-			TextChanged="TBox_TextChanged">
-			<TextBox.Text>
-				<Binding
-					Converter="{StaticResource _NumericUpDownValueConverter}"
-					ElementName="This"
-					Mode="TwoWay"
-					Path="Value">
-					<Binding.ValidationRules>
-						<local:NumericUpDownValidationRule />
-					</Binding.ValidationRules>
-				</Binding>
-			</TextBox.Text>
-		</TextBox>
-		<Grid
-			x:Name="ButtonsGrid"
-			Width="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
-			Height="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
-			HorizontalAlignment="Right"
-			Background="Transparent">
-			<Grid.RowDefinitions>
-				<RowDefinition Height="*" />
-				<RowDefinition Height="0" />
-				<RowDefinition Height="*" />
-			</Grid.RowDefinitions>
-			<Button
-				x:Name="UpButton"
-				MinWidth="0"
-				Margin="0,0,1,0"
-				Padding="2"
-				HorizontalAlignment="Stretch"
-				VerticalAlignment="Stretch"
-				BorderThickness="0"
-				Click="UpButton_Click"
-				Focusable="False"
-				IsTabStop="False">
-				<Button.Background>
-					<LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
-						<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
-						<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" />
-					</LinearGradientBrush>
-				</Button.Background>
-
-				<Button.Content>
-					<Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-						<Canvas Width="100" Height="100">
-							<Polygon Fill="Black" Points="0,100 50,0 100,100" Stroke="Black" />
-						</Canvas>
-					</Viewbox>
-				</Button.Content>
-			</Button>
-			<Button
-				x:Name="DownButton"
-				Grid.Row="2"
-				MinWidth="0"
-				Margin="0,0,1,0"
-				Padding="2"
-				HorizontalAlignment="Stretch"
-				VerticalAlignment="Stretch"
-				BorderThickness="0"
-				Click="DownButton_Click"
-				Focusable="False"
-				IsTabStop="False">
-				<Button.Background>
-					<LinearGradientBrush StartPoint="1,0" EndPoint="1,1">
-						<GradientStop Offset="0" Color="{DynamicResource {x:Static SystemColors.ControlColorKey}}" />
-						<GradientStop Offset="1" Color="{DynamicResource {x:Static SystemColors.ControlLightColorKey}}" />
-					</LinearGradientBrush>
-				</Button.Background>
-				<Button.Content>
-					<Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-						<Canvas Width="100" Height="100">
-							<Polygon Fill="Black" Points="0,0 50,100 100,0" Stroke="Black" />
-						</Canvas>
-					</Viewbox>
-				</Button.Content>
-			</Button>
-		</Grid>
-	</Grid>
+    x:Class="JocysCom.ClassLibrary.Controls.NumericUpDown"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:JocysCom.ClassLibrary.Controls"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="This"
+    Margin="0"
+    Padding="0"
+    Loaded="UserControl_Loaded"
+    SnapsToDevicePixels="True"
+    Unloaded="UserControl_Unloaded"
+    mc:Ignorable="d">
+    <UserControl.Resources>
+        <local:NumericUpDownStyleConverter x:Key="_NumericUpDownStyleConverter" />
+        <local:NumericUpDownValueConverter x:Key="_NumericUpDownValueConverter" />
+    </UserControl.Resources>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <TextBox
+            x:Name="TBox"
+            MinWidth="75"
+            Margin="0"
+            VerticalAlignment="Center"
+            x:FieldModifier="public"
+            MouseWheel="TBox_MouseWheel"
+            PreviewKeyDown="TBox_PreviewKeyDown"
+            SizeChanged="TextBox_SizeChanged"
+            SnapsToDevicePixels="True"
+            TextAlignment="Right"
+            TextChanged="TBox_TextChanged">
+            <TextBox.Text>
+                <Binding
+                    Converter="{StaticResource _NumericUpDownValueConverter}"
+                    ElementName="This"
+                    Mode="TwoWay"
+                    Path="Value">
+                    <Binding.ValidationRules>
+                        <local:NumericUpDownValidationRule />
+                    </Binding.ValidationRules>
+                </Binding>
+            </TextBox.Text>
+        </TextBox>
+        <Grid
+            x:Name="ButtonsGrid"
+            Width="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
+            Height="{Binding ElementName=TBox, Path=ActualHeight, Mode=OneWay, Converter={StaticResource _NumericUpDownStyleConverter}, ConverterParameter=-2}"
+            HorizontalAlignment="Right">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="0" />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Button
+                x:Name="UpButton"
+                MinWidth="0"
+                Margin="0,0,1,0"
+                Padding="3.5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="#dedede"
+                BorderThickness="0"
+                Click="UpButton_Click"
+                Focusable="False"
+                IsTabStop="False"
+                SnapsToDevicePixels="True">
+                <Button.Style>
+                    <Style>
+                        <Style.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="0,4,0,0" />
+                            </Style>
+                        </Style.Resources>
+                    </Style>
+                </Button.Style>
+                <Button.Content>
+                    <Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Path
+                            Grid.Column="1"
+                            Width="10"
+                            Height="5"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Data="M 0,0 L 10,0 L 5,5 Z"
+                            Fill="Black"
+                            RenderTransformOrigin="0.5,0.5">
+                            <Path.RenderTransform>
+                                <ScaleTransform ScaleY="-1" />
+                            </Path.RenderTransform>
+                        </Path>
+                    </Viewbox>
+                </Button.Content>
+            </Button>
+            <Button
+                x:Name="DownButton"
+                Grid.Row="2"
+                MinWidth="0"
+                Margin="0,0,1,0"
+                Padding="3.5"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Background="#dedede"
+                BorderThickness="0"
+                Click="DownButton_Click"
+                Focusable="False"
+                IsTabStop="False"
+                SnapsToDevicePixels="True">
+                <Button.Style>
+                    <Style>
+                        <Style.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="0,0,4,0" />
+                            </Style>
+                        </Style.Resources>
+                    </Style>
+                </Button.Style>
+                <Button.Content>
+                    <Viewbox HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                        <Path
+                            Grid.Column="1"
+                            Width="10"
+                            Height="5"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Data="M 0,0 L 10,0 L 5,5 Z"
+                            Fill="Black"
+                            RenderTransformOrigin="0.5,0.5" />
+                    </Viewbox>
+                </Button.Content>
+            </Button>
+        </Grid>
+    </Grid>
 </UserControl>
